--- a/App/package.json
+++ b/App/package.json
@@ -26,7 +26,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "react-DOM": "latest"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.10"
