--- a/App/package.json
+++ b/App/package.json
@@ -23,11 +23,14 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "material-ui": "^0.20.2",
     "react": "^16.12.0",
+    "react-DOM": "latest",
     "react-dom": "^16.12.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.10.1",
-    "react-DOM": "latest"
+    "webpack-dev-server": "^3.10.1"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.10"
