--- a/App/package.json
+++ b/App/package.json
@@ -25,14 +25,26 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "material-ui": "^0.20.2",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-DOM": "latest",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "webpack-cli": "^3.3.10"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
