--- a/App/package.json
+++ b/App/package.json
@@ -28,14 +28,18 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-DOM": "latest",
+    "react-addons-update": "^15.6.2",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "actions": "^1.3.0",
     "webpack-cli": "^3.3.10"
   },
   "babel": {
