--- a/App/package.json
+++ b/App/package.json
@@ -23,7 +23,9 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "connected-react-router": "^6.7.0",
     "css-loader": "^3.4.2",
+    "history": "^4.10.1",
     "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -33,6 +35,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.3"
@@ -40,6 +44,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "actions": "^1.3.0",
+    "remote-redux-devtools": "^0.5.16",
     "webpack-cli": "^3.3.10"
   },
   "babel": {
