--- a/App/package.json
+++ b/App/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@material-ui/icons": "^4.9.1",
     "actions": "^1.3.0",
     "remote-redux-devtools": "^0.5.16",
     "webpack-cli": "^3.3.10"
